[tool.poetry]
name = "research_laboratory"
version = "0.1.0"
description = ""
authors = ["Andrey Kosinskiy"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.2"
django-environ = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
